# hackathon-2026-03-20-agora-preply

./: README.md  evaluation_template.md  hackathon-rating-rubric.md
submissions/loop-your-lesson/backend/: entrypoint.sh  pyproject.toml
submissions/loop-your-lesson/backend/apps/accounts/: admin.py  models.py
submissions/loop-your-lesson/backend/apps/classtime_sessions/: admin.py  apps.py  models.py
submissions/loop-your-lesson/backend/apps/conversations/: admin.py  models.py
submissions/loop-your-lesson/backend/apps/daily_briefings/: admin.py  apps.py  models.py  services.py
submissions/loop-your-lesson/backend/apps/learning_progress/: apps.py  models.py  services.py
submissions/loop-your-lesson/backend/apps/lessons/: admin.py  models.py  services.py
submissions/loop-your-lesson/backend/apps/skill_results/: admin.py  apps.py  models.py
submissions/loop-your-lesson/backend/apps/tutoring/: admin.py  (+2 more)
submissions/loop-your-lesson/backend/config/: api_urls.py  urls.py  views.py
submissions/loop-your-lesson/backend/docs/: data-model.md
submissions/loop-your-lesson/backend/scripts/: test_pusher.py
submissions/loop-your-lesson/backend/services/: __init__.py  exceptions.py  pipeline.py  temporal_client.py
submissions/loop-your-lesson/backend/stream/: events.py  redis_stream.py  sse.py
submissions/loop-your-lesson/backend/templates/: spa.html
submissions/loop-your-lesson/backend/tests/: factories.py  test_context.py  test_health.py  test_schemas.py  test_stream_events.py  test_tokens.py
submissions/loop-your-lesson/backend/workflows/: chat_agent.py
(+250 files in other folders)
