[project]
name = "loop-your-lesson"
version = "0.1.0"
description = "AI-powered lesson intelligence for Preply"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.6",
    "django-vite>=3.0",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "pydantic>=2.10",
    "anthropic>=0.42",
    "temporalio>=1.9",
    "httpx>=0.28",
    "dj-database-url>=2.3",
    "python-dotenv>=1.0",
    "gunicorn>=23.0",
    "pysher>=1.0.8",
    "whitenoise>=6.8",
    "agora-token-builder>=1.0",
    "pysher>=1.0",
    "thymia-sentinel>=1.1.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "ruff>=0.8",
    "factory-boy>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "apps", "services", "stream", "workflows"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["config", "apps", "services", "stream", "workflows"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
